kubernetes/infrastructure/kubeedge/cloudstream-iptables.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudstream-iptables
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: cloudstream-iptables
  template:
    metadata:
      labels:
        app: cloudstream-iptables
    spec:
      hostNetwork: true
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: iptables-maintainer
          image: alpine:latest
          command:
            - sh
            - -c
            - |
              [...]
          securityContext:
            privileged: true
